@@ -19,10 +19,6 @@ import static org.mockito.Mockito.never
 import static org.mockito.Mockito.verify
 import static org.mockito.Mockito.when
 
-/**
- * If you would like to run this test in the IDE, add the following JVM options. The same is done in pom.xml
- * --add-opens java.base/java.util=ALL-UNNAMED
- */
 class ApplicationConfiguratorTest {
 
     static final String EXPECTED_REGISTRY_URL = 'http://my-reg'
@@ -37,7 +33,9 @@ class ApplicationConfiguratorTest {
     private FileSystemUtils fileSystemUtils
     private TestLogger testLogger
     Map testConfig = [
-            application: [:],
+            application: [
+                    localHelmChartFolder : 'someValue',
+            ],
             registry   : [
                     url         : EXPECTED_REGISTRY_URL,
                     pullUrl: "pull-$EXPECTED_REGISTRY_URL",
@@ -67,6 +65,13 @@ class ApplicationConfiguratorTest {
                             nginx    : [:],
                     ]
             ]
+    ]
+    
+    // We have to set this value using env vars, which makes tests complicated, so ignore it
+    Map almostEmptyConfig = [
+            application: [
+                    localHelmChartFolder : 'someValue',
+            ],
     ]
     
     @BeforeEach
@@ -155,7 +160,29 @@ class ApplicationConfiguratorTest {
         }
         assertThat(exception.message).isEqualTo('When setting jenkins URL, scmm URL must also be set and the other way round')
     }
-
+    
+    @Test
+    void 'Fails if monitoring local is not set'() {
+        testConfig['application']['mirrorRepos'] = true
+        testConfig['application']['localHelmChartFolder'] = ''
+        
+        def exception = shouldFail(RuntimeException) {
+            applicationConfigurator.setConfig(testConfig)
+        }
+        assertThat(exception.message).isEqualTo('Missing config for localHelmChartFolder.\n' +
+                'Either run inside the official container image or setting env var LOCAL_HELM_CHART_FOLDER=\'charts\' ' +
+                'after running \'scripts/downloadHelmCharts.sh\' from the repo')
+    }
+    
+    @Test
+    void 'Ignores empty localHemlChartFolder, if mirrorRepos is not set'() {
+        testConfig['application']['mirrorRepos'] = false
+        testConfig['application']['localHelmChartFolder'] = ''
+        
+        applicationConfigurator.setConfig(testConfig)
+        // no exceptions means success
+    }
+    
     @Test
     void "uses default localhost url for jenkins and scmm if nothing specified"() {
         testConfig.jenkins['url'] = ''
@@ -196,6 +223,8 @@ images:
   kubectl: "localhost:30000/kubectl"
   helm: "localhost:30000/helm"
         """
+
+        applicationConfigurator.setConfig(almostEmptyConfig)
         applicationConfigurator
                 .setConfig(configFile)
         def config = applicationConfigurator
@@ -224,10 +253,13 @@ images:
 
     @Test
     void "config file has only fields that are present in default values"() {
-        Map defaultConfig = applicationConfigurator.setConfig([:])
+        
+        // ⚠️ If you run into an endless loop in this test, you might have added a non-static class to Schema.grooy
+        
+        Map defaultConfig = applicationConfigurator.setConfig(almostEmptyConfig)
         
         def fields = getAllFieldNames(Schema.class).sort()
-        def keys = getAllKeys2(defaultConfig).sort()
+        def keys = getAllKeys(defaultConfig).sort()
 
         assertThat(fields).isSubsetOf(keys)
     }
@@ -425,11 +457,11 @@ images:
         return fieldNames
     }
 
-    List<String> getAllKeys2(Map map, String parentKey = '', List<String> keysList = []) {
+    List<String> getAllKeys(Map map, String parentKey = '', List<String> keysList = []) {
         map.each { key, value ->
             def currentKey = parentKey + key
-            if (value instanceof Map) {
-                getAllKeys2(value, currentKey + '.', keysList)
+            if (value instanceof Map && !value.isEmpty()) {
+                getAllKeys(value, currentKey + '.', keysList)
             } else {
                 keysList.add(currentKey)
             }
